zoom out button spacing UI fixed

--- a/src/components/commonCss/icons.scss
+++ b/src/components/commonCss/icons.scss
@@ -200,7 +200,7 @@
 }
 .zoom-in-hover {@include icons("../../assests/images/Path 15286.svg",  10px, 10px)}
 .zoom-in {@include icons("../../assests/images/zoom-in.svg",  10px, 10px)}
-.zoom-out {@include icons("../../assests/images/zoom-out.svg", 16px, 16px)}
+.zoom-out {@include icons("../../assests/images/zoom-out.svg", 14px, 14px)}
 .zoom-out-hover {@include icons("../../assests/images/zoom-out-hover.svg", 16px, 16px)}
 
 .link-icon {@include icons("../../assests/images/link.svg", 20px, 20px)}
